# stroyhelper-bot

./: .env.example  .gitignore  .replit  Dockerfile  README.md  ai_helper.py  main.py  material_calculator.py  materials.json  pyproject.toml  railway.json  shopping_list.json  shopping_list.py
attached_assets/: Pasted-import-json-import-os-from-aiogram-import-Router-types-from-aiogram-types-import-Message-InlineKey-1740647855578.txt  Pasted-import-logging-import-asyncio-import-os-import-json-from-aiogram-import-Bot-Dispatcher-types-F-fr-1740589855585.txt
